Creando terraform para levantar sevidor con sns y modificando pipeline de backend.

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,82 +1,81 @@
 name: Deploy of backend to EC2
 
 on:
-    push:
-        paths:
-            - backend/**/*
-        branches: [main]
+  push:
+    paths:
+      - gestion-app-nest-backend/**/*
+    branches: [main]
 
 jobs:
-    avoid_redundancy:
-        runs-on: ubuntu-22.04
-        steps:
-            - name: Cancel Previous Redundant Builds
-              uses: styfle/cancel-workflow-action@0.12.0
-              with:
-                access_token: ${{ github.token }}
-    
-    dependencies:
-        runs-on: ubuntu-22.04
-        steps:
-        - uses: actions/checkout@v4.1.1
-          with:
-            fetch-depth: 0
-        - uses: actions/setup-node@v4.0.0
-          with:
-            node-version: "20"
-            cache: "npm"
-            cache-dependency-path: "backend/*"
-        - name: Installing dependencies
-          run: cd backend && npm install
-    
-    test:
-        needs: [dependencies]
-        runs-on: ubuntu-22.04
-        steps:
-          - uses: actions/checkout@v4.1.1
-            with:
-                fetch-depth: 0
-          - uses: actions/setup-node@v4.0.0
-            with:
-                cache: "npm"
-                node-version: "20"
-                cache-dependency-path: "backend/*"
-          - name: Installing dependencies
-            run: cd backend && npm ci
-          - name: Testing
-            run: cd backend && npm test
+  avoid_redundancy:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Cancel Previous Redundant Builds
+        uses: styfle/cancel-workflow-action@0.12.0
+        with:
+          access_token: ${{ github.token }}
 
+  dependencies:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4.1.1
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4.0.0
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: "gestion-app-nest-backend/*"
+      - name: Installing dependencies
+        run: cd gestion-app-nest-backend && npm install --production
 
-    build:
-        needs: [dependencies]
-        runs-on: ubuntu-22.04
-        steps:
-          - uses: actions/checkout@v4
-            with:
-                fetch-depth: 0
-          - uses: actions/setup-node@v4.0.0
-            with:
-                node-version: "20"
-                cache: "npm"
-                cache-dependency-path: "backend/*"
-          - name: Login to docker hub
-            run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
-          - name: Build docker image
-            run: docker build -t aguekdjian/backend-gestion-app:latest backend/.
-          - name: Publish image to docker hub
-            run: docker push aguekdjian/backend-gestion-app:latest
-      
-    deploy:
-        needs: [test, build]
-        runs-on: aws-ec2
-        steps:
-          - name: Login to docker hub
-            run: sudo docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
-          - name: Delete old docker image
-            run: sudo docker image prune
-          - name: Pull Image from docker hub
-            run: sudo docker pull aguekdjian/backend-gestion-app:latest
-          - name: Delete old container
-            run: sudo docker rm -f backend-gestion-app-container
-          - name: Run docker container
-            run: sudo docker run -d -p 8080:8080 --name backend-gestion-app-container -e USER_DB=${{secrets.USER_DB}} -e PASSWORD_DB=${{secrets.PASSWORD_DB}} -e NAME_DB=${{secrets.NAME_DB}} -e JWT_SECRET=${{secrets.JWT_SECRET}} aguekdjian/backend-gestion-app:latest
+  test:
+    needs: [dependencies]
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4.1.1
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4.0.0
+        with:
+          cache: "npm"
+          node-version: "20"
+          cache-dependency-path: "gestion-app-nest-backend/*"
+      - name: Installing dependencies
+        run: cd gestion-app-nest-backend && npm install --production
+      - name: Testing
+        run: cd gestion-app-nest-backend && npm run test
+
+  build:
+    needs: [dependencies]
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4.0.0
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: "gestion-app-nest-backend/*"
+      - name: Login to docker hub
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+      - name: Build docker image
+        run: docker build -t aguekdjian/backend-gestion-app:latest gestion-app-nest-backend/.
+      - name: Publish image to docker hub
+        run: docker push aguekdjian/backend-gestion-app:latest
+
+  deploy:
+    needs: [test, build]
+    runs-on: aws-ec2-gestion-app
+    steps:
+      - name: Login to docker hub
+        run: sudo docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+      - name: Delete old docker image
+        run: sudo docker image prune
+      - name: Pull Image from docker hub
+        run: sudo docker pull aguekdjian/backend-gestion-app:latest
+      - name: Delete old container
+        run: sudo docker rm -f backend-gestion-app-container
+      - name: Run docker container
+        run: sudo docker run -d -p 3000:3000 --name backend-gestion-app-container -e JWT_SECRET=${{secrets.JWT_SECRET}} aguekdjian/backend-gestion-app:latest
