--- a/gestion-app-frontend/package.json
+++ b/gestion-app-frontend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.10.7",
+    "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.298.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
